WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277205
[UnifiedPDF] AsyncPDFRenderer should not communicate with the PDF plugin
https://bugs.webkit.org/show_bug.cgi?id=277205
Summary
[UnifiedPDF] AsyncPDFRenderer should not communicate with the PDF plugin
Abrar Rahman Protyasha
Reported
2024-07-27 05:43:19 PDT
It should, instead, communicate with the PDFPresentationController instance that owns it.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-27 05:43:32 PDT
<
rdar://problem/132633659
>
Abrar Rahman Protyasha
Comment 2
2024-07-27 05:49:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31349
EWS
Comment 3
2024-07-29 12:15:05 PDT
Committed
281515@main
(4e6afee99ec0): <
https://commits.webkit.org/281515@main
> Reviewed commits have been landed. Closing PR #31349 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug